--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a>B2026</a>/
             <a>0503182588</a>
           </div>
-          <p class="mb-5">I am a postdoctoral research fellow at Tampere University. My research focuses on Probabilistic machine learning, Bayesian data analysis, and their applications to game studies. I have also cooperated with researchers from other disciplines including business and management and software development.</p>
+          <p class="mb-5">I am a Research Fellow at Trinity College Dublin. I am a member of <a href="https://www.forecastlab.org/"> PaCE (Patterns of Conflict Emergence) </a>, an ERC-founded project. My current research focuses on machine learning for satellite imagery data and time series and their applications to conflict research. I have also cooperated with researchers from other disciplines, including game studies, business and management and software development.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/chienlu/">
@@ -95,15 +95,15 @@
           <h2 class="mb-5">Research</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0"><i class="fas fa-object-group"></i> Probabilistic Machine Learning, Bayesian Data Analysis</h3>
-              <p>Methodology development focusing on probabilistic representation learning problems such as multiple representations, underlying temporal dynamics, and heterogeneous data analysis.</p>
+              <h3 class="mb-0"><i class="fas fa-object-group"></i> Machine Learning</h3>
+              <p>I develop methodologies that use satellite imagery and time series data for causal inference in conflict research, focusing on representation learning. I have also worked on various fundamental representation learning problems such as multiple representations, underlying temporal dynamics, and heterogeneous data analysis.</p>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><i class="fas fa-handshake"></i> Empirical Analysis, Collaborative Works</h3>
-              <p>Currently, I mainly cooperate with researchers from <a href = "https://coe-gamecult.org/">CoE GameCult</a>, we focus on issues such as player experiences, player typologies, game development, and gamification. I am particularly interested in how to leverage video games communicate tools for societal issues such as climate change and animal welfare</p>
+              <p>I was a member of <a href = "https://coe-gamecult.org/">CoE GameCult</a>. I have focused on issues such as player experiences, player typologies, game development, and gamification. </p>
               
             </div>
           </div>
@@ -186,6 +186,7 @@
         <h2 class="mb-5">Publications</h2>
         <h3 class="mb-0"></i> Methodology Development</h3>
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
+        <div><i class="fas fa-book"></i> Chien Lu, and Thomas Chadefaux. <b>Structured Pixels: Satellite Imagery as the Cause in Causal Effect Estimation.</b> <i>Hawaii International Conference on System Sciences (HICSS)</i>, 2026. <a href="https://openreview.net/pdf?id=Fh9l_pVsBfv"><i class="fas fa-file-pdf"></i></a></div>
         <div><i class="fas fa-book"></i> Chien Lu, and Jaakko Peltonen. <b>Gaussian Copula Embeddings.</b> <i>Conference on Neural Information Processing Systems (NeurIPS)</i>, 2022. <a href="https://openreview.net/pdf?id=Fh9l_pVsBfv"><i class="fas fa-file-pdf"></i></a></div>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Timo Nummenmaa, and Jyrki Nummenmaa. <b>Nonparametric Exponential Family Graph Embeddings for Multiple Representation Learning.</b> <i>Conference on Uncertainty in Artificial Intelligence (UAI)</i>, 2022. <a href="https://openreview.net/pdf?id=rGffMdIi9g9"><i class="fas fa-file-pdf"></i></a></div>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Timo Nummenmaa, Jyrki Nummenmaa, and Kalervo Järvelin. <b>Cross-structural Factor-topic Model: Document Analysis with Sophisticated Covariates.</b> <i>Asian Conference on Machine Learning (ACML)</i>, 2021. [<i class="fas fa-trophy text-warning"></i> best student paper award runner-up] <a href="https://proceedings.mlr.press/v157/lu21a/lu21a.pdf"><i class="fas fa-file-pdf"></i></a></div>
