--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
             <span class="text-primary"></span>
           </h1>
           <div class="subheading mb-5">
-            <a href="chien.lu@tuni.fi">Chien.Lu@tuni.fi</a>/
-            <a>B2026</a>/
-            <a>0503182588</a>
+            <a href="luc4@tcd.ie">luc4@tcd.ie</a>/
+            <a>+353 858597663</a>
           </div>
           <p class="mb-5">I am a Research Fellow at Trinity College Dublin. I am a member of <a href="https://www.forecastlab.org/"> PaCE (Patterns of Conflict Emergence) </a>, an ERC-founded project. My current research focuses on machine learning for satellite imagery data and time series and their applications to conflict research. I have also cooperated with researchers from other disciplines, including game studies, business and management and software development.</p>
           <ul class="list-inline list-social-icons mb-0">
