--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a href="luc4@tcd.ie">luc4@tcd.ie</a>/
             <a>+353 858597663</a>
           </div>
-          <p class="mb-5">I am a Research Fellow at Trinity College Dublin. I am a member of <a href="https://www.forecastlab.org/"> PaCE (Patterns of Conflict Emergence) </a>, an ERC-founded project. My current research focuses on machine learning and its application to conflict research. I have also cooperated with researchers from other disciplines, including game studies, business and management and software development.</p>
+          <p class="mb-5">I am a research fellow at Trinity College Dublin. I am a member of <a href="https://www.forecastlab.org/"> PaCE (Patterns of Conflict Emergence) </a>, an ERC-founded project. My current research focuses on machine learning and its application to conflict research. I have also cooperated with researchers from other disciplines, including game studies, business and management and software development.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/chienlu/">
